# python-package-template

./: .gitignore  README.md  pyproject.toml  setup.py
compute/: __init__.py  _version.py
compute/op/vector_compute/: __init__.py
compute/op/vector_compute/src/: vector_add.cpp  vector_add.h  vector_add_kernal.cu
test/: addiction.py
